java 8 arg line