@@ -93,7 +93,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.19.1</version>
 				<configuration>
-					<argLine>-Xmx2048m -XX:MaxPermSize=256m -Djava.awt.headless=true</argLine>
+					<argLine>-Xmx2048m -Djava.awt.headless=true</argLine>
 					<excludes>
 						<exclude>${exclude.tests}</exclude>
 					</excludes>
